Fixed non-responsiveness
footer width didn't fit and the right side of the navbar was not visible
when the window was too narrow. navbar is responsive now, as it displays
an overflow menu now if necessary

--- a/css/moveit.css
+++ b/css/moveit.css
@@ -22,6 +22,10 @@ body, html {
   z-index: 200 !important;
 }
 
+.navbar > .container {
+  width: 100%;
+}
+
 /* line 16, /Applications/XAMPP/xamppfiles/htdocs/moveit/css/moveit.scss */
 .clear {
   clear: both; }
@@ -116,7 +120,7 @@ body, html {
 
 /* line 108, /Applications/XAMPP/xamppfiles/htdocs/moveit/css/moveit.scss */
 .footer {
-  width: 100%;
+  width: 1170px;
   background-color: #f5f5f5; }
   /* line 111, /Applications/XAMPP/xamppfiles/htdocs/moveit/css/moveit.scss */
   .footer > .container {
